Use kmem_zalloc() instead of kmem_alloc() to initialize structure. struct audio_format added a member since isaki-audio2. Fix PR kern/54662 "uaudio sometimes not recognized".